# ov2math

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ov2concepts.h
build_config/: version.hpp.in
src/ov2math/: ov2math.cpp  vector2.hpp
src/ov2math_tests/: ov2math_tests.cpp
